gitops/apps/pocketbase/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocketbase
spec:
  serviceName: pocketbase
  replicas: 1
  selector:
    matchLabels:
      app: pocketbase
  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      containers:
      - name: pocketbase
        image: ghcr.io/muchobien/pocketbase:0.36.7
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: pb-data
          mountPath: /pocketbase
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        command:
          - "/usr/local/bin/pocketbase"
          - "serve"
          - "--http=0.0.0.0:8090"
          - "--dir=/pocketbase/pb_data"
          - "--publicDir=/pocketbase/pb_public"
          - "--hooksDir=/pocketbase/pb_hooks"
      volumes:
      - name: pb-data
        persistentVolumeClaim:
          claimName: pocketbase
