gitops/apps/pocketbase/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
spec:
  selector:
    app: pocketbase
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
