gitops/apps/pocketbase/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketbase
spec:
  parentRefs:
    - name: http-gateway
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - "api.konst.fish"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sudoku
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: pocketbase
          port: 8090
